fdo#81651 Wrong argument type in overriding class

See commits:
16752a8a773cf8096e28628237238a562016c4e5
c3a89936abc7967ebe8916ca83cb38f6837f9aa1

Change-Id: If6ff9b2bcaad00393a29d50fd806e23d74a84272
Reviewed-on: https://gerrit.libreoffice.org/10490
Reviewed-by: David Tardon <dtardon@redhat.com>
Tested-by: David Tardon <dtardon@redhat.com>